miniproject/Webapp-Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-app
spec:
  rules:
   - host: www.pratik.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: frontend-service
             port:
               number: 80
       - path: /api
         pathType: Prefix
         backend:
           service:
             name: backend-service
             port:
               number: 80
